--- a/djangu_custom_admin_index.html
+++ b/djangu_custom_admin_index.html
@@ -2,7 +2,7 @@
 {% load i18n static %}
 
 {% block extrastyle %}
-    { block.super }
+    {{ block.super }}
     <link rel="stylesheet" type="text/css" href="{% static 'admin/css/dashboard.css' %}">
     {% endblock %}
 
